# vibinremote

./: Cargo.toml  LICENSE  README.md  sample_keymap.json
src/: errors.rs  lib.rs  main.rs  validate.rs
tests/: cli.rs
