[package]
name = "vibinremote"
version = "1.0.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
http = "0.2.9"
log = "0.4.20"
rdev = { version = "0.5.3", features = ["unstable_grab"] }
reqwest = { version = "0.11.20", features = ["blocking", "json"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = "3.0.4"